[038] refactor(sale-item): refactor sale item service for more flexible use-case